# edge-ml-cable-anomaly

./: main.py  pyproject.toml
notebooks/: analyze_100mbps.ipynb  frequency_response.ipynb  manchester_decoding.ipynb  manchester_decoding_all.ipynb  manchester_decoding_all_rp.ipynb  manchester_decoding_rp.ipynb  packet_correlation.ipynb  packet_decoding.ipynb  visualize.ipynb  visualize_verify.ipynb
oscilloscope/: capture_packets.m  capture_packets_100mbps.m  combined_test.m  osci_fast_frame_basic.m  osci_fastframe.asv  osci_fastframe.m  osci_fastframe_basic.asc  osci_save_reference_packet.m  osci_signal_acquisition.m  oscilloscope.m  packet_analysis.ipynb  save_packets.m  save_packets_100_combined.m  save_packets_100mbps.asv  save_packets_100mbps.m  untitled.m
oscilloscope/data/: ethernet_packets.mat  ethernet_packets_probe.mat
raspi/: ethernet_sim.py  packet_analysis.py  random_packets.py  random_trigger_sim.py
rp/: packet_acquisition.m  rp_signal_acquisition.py  save_packets_rp.asv  save_packets_rp.m  save_packets_rp_100mbps.m
