[project]
name = "thesis-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "scapy>=2.7.0",
    "scipy>=1.17.1",
]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
